[gd_scene load_steps=35 format=3 uid="uid://wpvvx1062by4"]

[ext_resource type="Script" path="res://scenes/levels/final_destination.gd" id="1_7wkst"]
[ext_resource type="Texture2D" uid="uid://djjsvqs5tqsbx" path="res://assets/sprites/levels/Final_destination/final_destination.png" id="2_uuor8"]
[ext_resource type="Texture2D" uid="uid://danyodi2w2jwg" path="res://assets/sprites/levels/Final_destination/black_hole.png" id="3_0nmpw"]
[ext_resource type="Texture2D" uid="uid://lywrfdtqb7no" path="res://assets/sprites/levels/Final_destination/ray.png" id="4_ag7v1"]
[ext_resource type="Texture2D" uid="uid://c1fmk8lv84d4y" path="res://assets/sprites/characters/UI/lives4.png" id="5_l2kp1"]
[ext_resource type="AudioStream" uid="uid://ccdhkc4sw0my7" path="res://assets/music/Final Destination (SSBB) Remix.mp3" id="5_pyhhj"]
[ext_resource type="Texture2D" uid="uid://cadunjbr4xltk" path="res://assets/sprites/characters/UI/lives3.png" id="6_nvctu"]
[ext_resource type="Script" path="res://scenes/levels/background.gd" id="6_xnc8f"]
[ext_resource type="Texture2D" uid="uid://c8paw5fxyg0ap" path="res://assets/sprites/characters/UI/lives2.png" id="7_23vyv"]
[ext_resource type="Texture2D" uid="uid://b2e2qix4hq48a" path="res://assets/sprites/levels/Final_destination/stars_bg.png" id="7_ci713"]
[ext_resource type="Texture2D" uid="uid://lxw64osk4wb" path="res://assets/sprites/levels/Final_destination/animated_stars1.png" id="8_f4ma1"]
[ext_resource type="Texture2D" uid="uid://btsf7c6noh4w" path="res://assets/sprites/characters/UI/lives1.png" id="8_r66gi"]
[ext_resource type="Texture2D" uid="uid://c7ru3t174ji8n" path="res://assets/sprites/levels/Final_destination/animated_stars2.png" id="9_axpi1"]
[ext_resource type="FontFile" uid="uid://s64op13ehwxv" path="res://assets/fonts/SMW2-Yoshis-Island.ttf" id="9_rqohv"]
[ext_resource type="Texture2D" uid="uid://cf4shnf8e4x7x" path="res://assets/sprites/levels/Final_destination/animated_stars3.png" id="10_1qhj2"]
[ext_resource type="Script" path="res://scenes/levels/mario_speed.gd" id="10_ro4u4"]
[ext_resource type="PackedScene" uid="uid://chrecxilcyrsu" path="res://scenes/characters/Mario.tscn" id="11_kvs04"]
[ext_resource type="Script" path="res://scenes/levels/acumulated_spd_1.gd" id="11_lcw3g"]
[ext_resource type="PackedScene" uid="uid://bk42bm2dml644" path="res://scenes/characters/kirbo.tscn" id="12_s0fis"]
[ext_resource type="Texture2D" uid="uid://clox0643os84m" path="res://assets/sprites/characters/Kirbo/bar_empty.png" id="12_spbjs"]
[ext_resource type="AudioStream" uid="uid://d4bm6po1y8as2" path="res://assets/sfx/Hits/G A M E.mp3" id="13_8fsou"]
[ext_resource type="Texture2D" uid="uid://c4c5drtrtskmo" path="res://assets/sprites/characters/Kirbo/bar_overlay.png" id="13_uu8v2"]
[ext_resource type="Texture2D" uid="uid://cr5hno1hehwpu" path="res://assets/sprites/characters/Kirbo/bar_fill.png" id="14_lwnb6"]
[ext_resource type="Texture2D" uid="uid://bpc6kg5nxt4k8" path="res://assets/sprites/characters/Kirbo/Cross_and_Biblie.png" id="15_hynvm"]
[ext_resource type="Script" path="res://scenes/levels/christendom_1.gd" id="15_wihpj"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_2gj44"]

[sub_resource type="SpriteFrames" id="SpriteFrames_s7p2q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_l2kp1")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_nvctu")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_23vyv")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_r66gi")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_3ykel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_l2kp1")
}],
"loop": true,
"name": &"0",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_nvctu")
}],
"loop": true,
"name": &"1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_23vyv")
}],
"loop": true,
"name": &"2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_r66gi")
}],
"loop": true,
"name": &"3",
"speed": 5.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_8t7y1"]
font = ExtResource("9_rqohv")
font_size = 250
outline_size = 44
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_16cd0"]
font = ExtResource("9_rqohv")
font_size = 250
font_color = Color(1, 0, 0, 1)
outline_size = 40
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lqc8v"]
font = ExtResource("9_rqohv")
font_size = 250
font_color = Color(1, 0.713726, 0.996078, 1)
outline_size = 40
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_eid0o"]
font = ExtResource("9_rqohv")
font_size = 100
font_color = Color(0, 0, 0, 1)
outline_size = 12

[sub_resource type="SpriteFrames" id="SpriteFrames_83sbf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_f4ma1")
}, {
"duration": 1.0,
"texture": ExtResource("9_axpi1")
}, {
"duration": 1.0,
"texture": ExtResource("10_1qhj2")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ci713")
}],
"loop": true,
"name": &"static",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_b0m0s"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_ci713")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Final Destination" type="Node2D"]
script = ExtResource("1_7wkst")

[node name="Floor" type="StaticBody2D" parent="."]
physics_material_override = SubResource("PhysicsMaterial_2gj44")

[node name="Hitbox" type="CollisionPolygon2D" parent="Floor"]
z_index = 1
polygon = PackedVector2Array(-913, -300, 787, -300, 904, -240, 679, -150, 613, 30, 347, 110, 86, 130, -168, 130, -470, 76, -654, 13, -718, -150, -1013, -230)

[node name="Sprite" type="Sprite2D" parent="Floor"]
position = Vector2(0, -287)
scale = Vector2(1.25, 1.25)
texture = ExtResource("2_uuor8")

[node name="Black Hole" type="Sprite2D" parent="Floor"]
z_index = -1
position = Vector2(-3, 70)
scale = Vector2(0.800001, 0.943822)
texture = ExtResource("3_0nmpw")

[node name="Ray" type="Sprite2D" parent="Floor"]
z_index = -2
position = Vector2(14, 200)
texture = ExtResource("4_ag7v1")

[node name="Camera" type="Camera2D" parent="."]
z_index = 99
position = Vector2(0, -364)
zoom = Vector2(0.6, 0.6)

[node name="Player 1 Lives" type="AnimatedSprite2D" parent="Camera"]
position = Vector2(-1194, 495)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_s7p2q")
animation = &"0"

[node name="Player 2 Lives" type="AnimatedSprite2D" parent="Camera"]
position = Vector2(1210, 495)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_3ykel")
animation = &"3"

[node name="Winner anouncement" type="Label" parent="Camera"]
offset_left = -3666.0
offset_top = -812.0
offset_right = 341.0
offset_bottom = -311.0
text = "...AND THE WINNER IS:"
label_settings = SubResource("LabelSettings_8t7y1")

[node name="Speedrunner Mario" type="Label" parent="Camera"]
offset_left = -3608.0
offset_top = -585.0
offset_right = 399.0
offset_bottom = -84.0
text = "Speedrunner Mario"
label_settings = SubResource("LabelSettings_16cd0")

[node name="Kirbo" type="Label" parent="Camera"]
offset_left = -3593.0
offset_top = -577.0
offset_right = 414.0
offset_bottom = -76.0
text = "Kirbo"
label_settings = SubResource("LabelSettings_lqc8v")

[node name="Mario_speed_1" type="Label" parent="Camera"]
offset_left = -1452.0
offset_top = 264.0
offset_right = -1219.0
offset_bottom = 415.0
text = "SPD"
label_settings = SubResource("LabelSettings_eid0o")
script = ExtResource("10_ro4u4")

[node name="Acumulated_SPD_1" type="Label" parent="Camera"]
offset_left = -1452.0
offset_top = 185.0
offset_right = -1219.0
offset_bottom = 336.0
text = "ASPD"
label_settings = SubResource("LabelSettings_eid0o")
script = ExtResource("11_lcw3g")

[node name="Mario_speed_2" type="Label" parent="Camera"]
offset_left = 973.0
offset_top = 270.0
offset_right = 1206.0
offset_bottom = 421.0
text = "SPD"
label_settings = SubResource("LabelSettings_eid0o")
script = ExtResource("10_ro4u4")

[node name="Acumulated_SPD_2" type="Label" parent="Camera"]
offset_left = 964.0
offset_top = 191.0
offset_right = 1275.0
offset_bottom = 342.0
text = "ASPD"
label_settings = SubResource("LabelSettings_eid0o")
script = ExtResource("11_lcw3g")

[node name="Kirbo_bars_size" type="Node2D" parent="Camera"]
scale = Vector2(0.5, 0.5)

[node name="Christendom_1" type="TextureProgressBar" parent="Camera/Kirbo_bars_size"]
offset_left = -2944.0
offset_top = 602.0
offset_right = -1864.0
offset_bottom = 730.0
texture_under = ExtResource("12_spbjs")
texture_over = ExtResource("13_uu8v2")
texture_progress = ExtResource("14_lwnb6")
script = ExtResource("15_wihpj")

[node name="Sprite2D" type="Sprite2D" parent="Camera/Kirbo_bars_size/Christendom_1"]
position = Vector2(0, 49)
scale = Vector2(0.5, 0.5)
texture = ExtResource("15_hynvm")

[node name="Christendom_2" type="TextureProgressBar" parent="Camera/Kirbo_bars_size"]
offset_left = 1868.0
offset_top = 602.0
offset_right = 2948.0
offset_bottom = 730.0
texture_under = ExtResource("12_spbjs")
texture_over = ExtResource("13_uu8v2")
texture_progress = ExtResource("14_lwnb6")
script = ExtResource("15_wihpj")

[node name="Sprite2D" type="Sprite2D" parent="Camera/Kirbo_bars_size/Christendom_2"]
position = Vector2(0, 49)
scale = Vector2(0.5, 0.5)
texture = ExtResource("15_hynvm")

[node name="LIGHT" type="DirectionalLight2D" parent="Camera"]
visible = false
z_index = 4096
energy = 187.85

[node name="Background Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_pyhhj")
volume_db = -10.0
autoplay = true
parameters/looping = true

[node name="Background" type="Node2D" parent="."]
script = ExtResource("6_xnc8f")

[node name="Layer 1" type="Parallax2D" parent="Background"]
z_index = -10
repeat_size = Vector2(1980, 1080)
autoscroll = Vector2(-350, 0)
repeat_times = 4

[node name="Sprite" type="Sprite2D" parent="Background/Layer 1"]
texture = ExtResource("7_ci713")

[node name="Layer 2" type="Parallax2D" parent="Background"]
z_index = -9
repeat_size = Vector2(1980, 1080)
autoscroll = Vector2(-500, 0)
repeat_times = 4

[node name="Sprite" type="AnimatedSprite2D" parent="Background/Layer 2"]
sprite_frames = SubResource("SpriteFrames_83sbf")
frame_progress = 0.463845

[node name="Layer 3" type="Parallax2D" parent="Background"]
z_index = -8
repeat_size = Vector2(1980, 1080)
autoscroll = Vector2(-750, 0)
repeat_times = 4

[node name="Sprite" type="AnimatedSprite2D" parent="Background/Layer 3"]
sprite_frames = SubResource("SpriteFrames_b0m0s")

[node name="Layer 4" type="Parallax2D" parent="Background"]
z_index = -7
scroll_offset = Vector2(0, 615)
repeat_size = Vector2(1980, 1080)
autoscroll = Vector2(-1000, 0)
repeat_times = 4

[node name="Sprite" type="AnimatedSprite2D" parent="Background/Layer 4"]
sprite_frames = SubResource("SpriteFrames_83sbf")
animation = &"static"

[node name="Mario" parent="." instance=ExtResource("11_kvs04")]
z_index = 5
position = Vector2(-750, -400)
scale = Vector2(0.2, 0.2)

[node name="front" type="RayCast2D" parent="Mario"]
scale = Vector2(50, 512)
target_position = Vector2(12, 0)
collision_mask = 2

[node name="back" type="RayCast2D" parent="Mario"]
scale = Vector2(50, 128)
target_position = Vector2(-12, 0)
collision_mask = 2

[node name="up" type="RayCast2D" parent="Mario"]
scale = Vector2(80, 50)
target_position = Vector2(0, -15)
collision_mask = 2

[node name="down" type="RayCast2D" parent="Mario"]
scale = Vector2(80, 50)
target_position = Vector2(0, 15)
collision_mask = 2

[node name="Kirbo" parent="." instance=ExtResource("12_s0fis")]
position = Vector2(750, -400)
scale = Vector2(0.15, 0.15)

[node name="front" type="RayCast2D" parent="Kirbo"]
scale = Vector2(50, 100)
target_position = Vector2(15, 0)
collision_mask = 2

[node name="up" type="RayCast2D" parent="Kirbo"]
scale = Vector2(100, 50)
target_position = Vector2(0, -20)
collision_mask = 2

[node name="down" type="RayCast2D" parent="Kirbo"]
scale = Vector2(100, 50)
target_position = Vector2(0, 20)
collision_mask = 2

[node name="back" type="RayCast2D" parent="Kirbo"]
scale = Vector2(50, 100)
target_position = Vector2(-16, 0)
collision_mask = 2

[node name="G A M E" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_8fsou")
volume_db = 5.237

[node name="Kirbo_win" type="AudioStreamPlayer" parent="."]

[node name="Mario_win" type="AudioStreamPlayer" parent="."]
